--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <style type="text/css">
     canvas { border: 1px solid black; }
   </style>
-  <canvas id="mycanvas" width="800" height="800"></canvas>
+  <canvas id="mycanvas" width="800" height="800" tabindex="0"></canvas>
 
   <script src="code.js"></script>
 </html>
