--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <style type="text/css">
-    canvas { border: 1px solid black; }
+    body { background: #111; }
+    canvas { border: 1px solid black; top: 50%; left: 50%; margin: -400px 0 0 -400px; position: absolute; display: block;}
   </style>
   <canvas id="mycanvas" width="800" height="800" tabindex="0"></canvas>
 
